--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ ol {
 .header__menu ul li a:after {
 	position: absolute;
 	left: 0;
-	bottom: 0;
+	bottom: 4px;
 	width: 100%;
 	height: 2px;
 	background: #e53637;
