--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,8 @@ ol {
 }
 
 .spad {
-	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-top: 50px;
+    padding-bottom: 100px;
 }
 
 .text-white h1,
@@ -975,7 +975,6 @@ ol {
 
 .product__item {
 	overflow: hidden;
-	margin-bottom: 20px;
 }
 
 .product__item.sale .product__item__pic .label {
@@ -996,18 +995,12 @@ ol {
 	opacity: 1;
 }
 
-.product__item:hover .product__item__text a {
-	left: 100px;
-	opacity: 1;
-	visibility: visible;
+.product__item__title:hover a {
+	color: #e53637;
+	transition: all 0.2s ease-in-out;
 }
 
-.product__item:hover .product__item__text h6 {
-	opacity: 0.5;
-}
-.product__item:hover .product__item__text h5 {
-	opacity: 0.5;
-}
+
 
 .product__item:hover .product__item__text .product__color__select {
 	opacity: 1;
@@ -1018,6 +1011,7 @@ ol {
 	position: relative;
 	background-position: center center;
 }
+
 
 .product__item__pic .label {
 	color: #111111;
@@ -1089,7 +1083,12 @@ ol {
 	padding: 10px;
 	display: inline-block;
 }
-
+.product__item__title a{
+	color: #333;
+	display: block;
+	font-weight: 700;
+	text-transform: uppercase;
+}
 .product__item__text {
 	padding-top: 20px;
 	position: relative;
@@ -1111,7 +1110,7 @@ ol {
 
 .product__item__text h6 {
 	color: #111111;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 600;
 	margin-bottom: 5px;
 	-webkit-transition: all, 0.3s;
@@ -1277,7 +1276,6 @@ ol {
 	display: block;
 }
 
-.shop__sidebar__categories ul,
 .shop__sidebar__price ul,
 .shop__sidebar__brand ul {
 	height: 225px;
@@ -1461,7 +1459,9 @@ ol {
 .shop__product__option {
 	margin-bottom: 45px;
 }
-
+.shop__product__option h4{
+	font-weight: 700;
+}
 .shop__product__option p {
 	color: #111111;
 	margin-bottom: 0;
